--- a/styles/main.css
+++ b/styles/main.css
@@ -76,3 +76,12 @@ footer {
 #result {
     display: none;
 }
+.col1 {
+    float: left;
+    width: 50%;
+  }
+  .col1 {
+    float: left;
+    width: 50%;
+  }
+ 
