--- a/styles/main.css
+++ b/styles/main.css
@@ -34,6 +34,7 @@ button, input[type=file] {
     font-size: 20px;
     background-color: #252525;
     color: #fff;
+    cursor: pointer;
 }
 
 .header-description {
