--- a/styles/main.css
+++ b/styles/main.css
@@ -138,3 +138,12 @@ footer {
   font-size: 16px;
 }
 
+table {
+    border-collapse: collapse;
+    border: 1px solid rgb(193, 19, 190);
+    letter-spacing: 1px;
+    font-size: 1rem;
+    width: 900px;
+    height: 50px;
+    text-align: center;
+  }
