--- a/TestingStyles/main.css
+++ b/TestingStyles/main.css
@@ -7,7 +7,7 @@
     font-family: Arial;
     background: white;
     margin: 0px 0px 0px;
-    overflow: hidden;
+    /*overflow: hidden;*/
     height: 100vh;
     width: 100w;
   }
