--- a/styles/main.css
+++ b/styles/main.css
@@ -1,191 +1,103 @@
 * {
-    font-family: Consolas, monospace;
-}
+    box-sizing: border-box;
+  }
 
-body {
-    color: #fff;
-    background-color: #252525;
-    font-size: 18px;
-    margin: 30px 30px 0;
-}
-
-.field, #button {
-    margin-bottom: 30px;
+  
+  body {
+    font-family: Arial;
+    background: white;
+    margin: 0px 0px 0px;
+    /*overflow: hidden;*/
+    height: 100vh;
+    width: 100w;
+  }
+  
+  .field, #button {
+    margin-bottom: 5px;
 }
 
 .field > label {
     display: inline-block;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     font-weight: bold;
 }
 
-.field > .download {
-    float: right;
-}
+  /* Header/Blog Title */
+  .header {
+    padding: 20px;
+    text-align: center;
+    background: white;
+  }
+  
+  .headerBU {
+    padding: 20px;
+    background-color:#a10101;
+    height: 120px;
+  }
+  .header h1 {
+    font-size: 30px;
+  }
 
-input, textarea {
-    background-color: #252525;
-    width: 100%;
-    color: #fff;
-}
-
-button, input[type=file] {
-    padding: 10px;
-    font-size: 20px;
-    background-color: #252525;
-    color: #fff;
-    cursor: pointer;
-}
-
-.header-description {
-    margin-bottom: 30px;
-}
-
-#message {
-    display: inline-block;
-    margin-left: 15px;
-}
-
-nav {
-    background-color: #252525;
-}
-
-nav > a {
-    display: inline-block;
+  
+  /* Style the top navigation bar */
+  .topnav {
+    overflow: hidden;
+    background-color:#a10101;
+  }
+  
+  /* Style the topnav links */
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
     padding: 15px;
     text-decoration: none;
-}
-
-nav > a.selected {
-    background-color: #333;
-}
-
-.page {
-    height: auto;
-    padding: 30px;
-    background-color: #333;
-}
-
-a {
-    color: #fff;
-}
-
-footer {
-    position: fixed;
-    margin: 5px;
-    bottom: 0px;
-    background-color: #252525;
-}
-
-#result {
-    display: none;
-}
-
-  .gfg {
-    margin: 3%;
-    position: relative;
-}
-
-.sender-txt {
-    position: relative;
-    top: 255px;
-    left: 245px;
-    color:black;
-}
-
-.encrypt-with-txt {
-    position: relative;
-    top: 282px;
-    left: 245px;
-    color:black;
-}
-.message-txt {
-    position: relative;
-    top: 350px;
-    left: 89px;
-    color:black;
-}
-.sending-to-txt {
-    position: relative;
-    top: 550px;
-    left: 89px;
-    color:black;
-}
-.sent-from-txt {
-    position: relative;
-    top: 450px;
-    left: 89px;
-    color:black;
-}
-.encrypted-message-txt {
-    position: relative;
-    height: auto;
-    color:black;
-}
-.button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-}
-
-button:disabled{
-    background-color:rgb(255, 131, 131);
-    }
-
-.hidden{ visibility: hidden; }
-.show{ visibility: visible }
-
-table {
-    border-collapse: collapse;
-    border: 1px solid rgb(193, 19, 190);
-    letter-spacing: 1px;
-    font-size: 1rem;
-    width: 900px;
-    height: 50px;
-    text-align: center;
-  }
-
-  .box {
-    height: auto;
-  }
-
-  image{
-    height:auto;
-    padding: 10px;
-    position:relative;
-  }
-  .field > label {
-    display: inline-block;
-    margin-bottom: 10px;
-    font-weight: bold;
   }
   
-  .page {
-    padding: 30px;
-    background-color: #333;
+  /* Change color on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
   }
- 
-  * {
-    box-sizing: border-box;
-  }
-
-  /* Create three unequal columns that floats next to each other */
-.column {
+  
+  /* Create two unequal columns that floats next to each other */
+  /* Left column */
+  .leftcolumn {   
     float: left;
-    padding: 10px;
+    width: 33%;
+    padding-left: 20px;
+    text-align: right;
   }
   
-  .left, .right {
-    width: 15%;
+  /* Right column */
+  .rightcolumn {
+    float: left;
+    width: 33%;
+    background-color: #f1f1f1;
+    padding-left: 20px;
   }
   
-  .middle {
-    width: 45%;
+  /* Fake image */
+  .fakeimg {
+    background-color: #aaa;
+    width: 100%;
+    padding: 20px;
+    
+  }
+
+  img {
+    align-items: center;
+    max-width: 100%;
+    height: auto;
+    
+  }
+  
+  /* Add a card effect for articles */
+  .card {
+    background-color: white;
+    padding: 20px;
+    margin-top: 20px;
   }
   
   /* Clear floats after the columns */
@@ -195,15 +107,82 @@ table {
     clear: both;
   }
   
-  /* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
-  @media screen and (max-width: 1200px) {
-    .column {
-      width: 100%;
-    }
+  /* Footer */
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 10px;
+    background-color: #a10101;
+    color: white;
+    text-align: center;
   }
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
 
-  #bottom {
-    bottom: 20;
-    left: 20;
-  }
+input, textarea {
+  background-color: #d4d4d4;
+  width: 100%;
+  color: #141414;
+}
+
+button, input[type=file] {
+  cursor: pointer;
+}
+
+#message {
+  display: inline-block;
+  margin-left: 15px;
+}
+
+.field > label {
+  display: inline-block;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.page {
   
+  background-color: white;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%
+}
+
+.responsive {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 100px;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
+@media screen and (max-width: 1000px) {
+  .column {
+    width: 100%;
+  }
+  .header{
+    width: 100%;
+  }
+  .img{
+    width: 100%;
+  }
+}
