attempted padding for tables
its just not working

--- a/styles/main.css
+++ b/styles/main.css
@@ -186,3 +186,11 @@ button, input[type=file] {
     width: 100%;
   }
 }
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+th, td {
+  padding: 15px;
+}
