Chart Fixed Distance
Made the encryption animation have consistent spacing between each letter and re-ordered the elements of the Caesar Shift page

--- a/styles/main.css
+++ b/styles/main.css
@@ -191,4 +191,10 @@ table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
   padding: 2px;
+  text-align: center;
+}
+
+td+td {
+  table-layout: fixed;
+  width: 30px;
 }
