style changes (phase 1 revisions)

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@
     font-family: Arial;
     background: white;
     margin: 0px 0px 0px;
-    /*overflow: hidden;*/
+    /*overflow: auto;*/
     height: 100vh;
     width: 100w;
   }
@@ -122,9 +122,11 @@
   float: left;
   width: 33.33%;
   padding: 5px;
+  padding-bottom: 60px; /*this stops the footer from covering the columns*/
 }
 
 input, textarea {
+  font-size: 20;
   background-color: #d4d4d4;
   width: 100%;
   color: #141414;
@@ -135,6 +137,7 @@ button, input[type=file] {
 }
 
 #message {
+  font-size: 20px;
   display: inline-block;
   margin-left: 15px;
 }
@@ -146,7 +149,6 @@ button, input[type=file] {
 }
 
 .page {
-  
   background-color: white;
 }
 
@@ -157,11 +159,11 @@ button, input[type=file] {
   clear: both;
 }
 
-.sticky {
+/* .sticky {
   position: fixed;
   top: 0;
   width: 100%
-}
+} */
 
 .responsive {
   width: 100%;
@@ -170,9 +172,10 @@ button, input[type=file] {
 }
 
 /* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
-.sticky + .content {
+
+/* .sticky + .content {
   padding-top: 100px;
-}
+} */
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
 @media screen and (max-width: 1000px) {
