style normalization phase 2

--- a/styles/main.css
+++ b/styles/main.css
@@ -27,6 +27,7 @@
     padding: 20px;
     text-align: center;
     background: white;
+    
   }
   
   .headerBU {
@@ -68,6 +69,7 @@
     width: 33%;
     padding-left: 20px;
     text-align: right;
+    font-size: 20px;
   }
   
   /* Right column */
@@ -76,6 +78,7 @@
     width: 33%;
     background-color: #f1f1f1;
     padding-left: 20px;
+    font-size: 20px;
   }
   
   /* Fake image */
@@ -123,6 +126,7 @@
   width: 33.33%;
   padding: 5px;
   padding-bottom: 60px; /*this stops the footer from covering the columns*/
+  font-size: 20px;
 }
 
 input, textarea {
