--- a/styles/main.css
+++ b/styles/main.css
@@ -14,12 +14,14 @@
   
   .field, #button {
     margin-bottom: 5px;
+    font-size: 14px;
 }
 
 .field > label {
     display: inline-block;
     margin-bottom: 5px;
     font-weight: bold;
+    font-size: 14px;
 }
 
   /* Header/Blog Title */
@@ -148,8 +150,9 @@ button, input[type=file] {
 
 .field > label {
   display: inline-block;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   font-weight: bold;
+  font-size: 14px;
 }
 
 .page {
