--- a/styles/main.css
+++ b/styles/main.css
@@ -54,6 +54,7 @@
     display: block;
     color: #f2f2f2;
     text-align: center;
+    font-size: 20px;
     padding: 15px;
     text-decoration: none;
   }
